Change model arch and added docker-compose
