# backend/docs/swagger.json
@@ -3,9 +3,27 @@
     "info": {
         "contact": {}
     },
-    "basePath": "/api/v1",
+    "basePath": "/api",
     "paths": {
-        "/api/company": {
+        "/company": {
+            "put": {
+                "description": "change company name in db",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "change company name in db",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Company"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "post new company in db",
                 "consumes": [
@@ -43,7 +61,7 @@
                 }
             }
         },
-        "/api/company/list": {
+        "/company/list": {
             "get": {
                 "description": "get all companies in db",
                 "consumes": [
@@ -66,7 +84,7 @@
                 }
             }
         },
-        "/api/programm": {
+        "/programm": {
             "post": {
                 "description": "post new programm in db",
                 "consumes": [
@@ -104,7 +122,7 @@
                 }
             }
         },
-        "/api/programm/list": {
+        "/programm/list": {
             "get": {
                 "description": "get all programmes in db",
                 "consumes": [
@@ -127,7 +145,7 @@
                 }
             }
         },
-        "/api/role": {
+        "/role": {
             "post": {
                 "description": "post new role in db",
                 "consumes": [
@@ -165,7 +183,7 @@
                 }
             }
         },
-        "/api/role/list": {
+        "/role/list": {
             "get": {
                 "description": "get all roles in db",
                 "consumes": [
@@ -188,7 +206,7 @@
                 }
             }
         },
-        "/api/technology": {
+        "/technology": {
             "post": {
                 "description": "post new technology in db",
                 "consumes": [
@@ -226,7 +244,7 @@
                 }
             }
         },
-        "/api/technology/list": {
+        "/technology/list": {
             "get": {
                 "description": "get all technologies in db",
                 "consumes": [
